# SockerTest

./: .gitignore  docker-compose.yml  index.txt  latest.txt
Data/: user-add.sh
Data/db/: public.sql
age/: Dockerfile  docker-compose.yml
age/git_hold/: config  index  packed-refs
age/src/backend/: age.c
api/: .env  .env_old  .env_test  .gitignore  Cargo.toml  Dockerfile  client.rest  docker-compose.yml  project.org  tech.org  test.html  testfile.org
api/src/: errors.rs  main.rs
api/src/auth/: db.rs  handlers.rs  model.rs
api/src/category/: db.rs
api/src/contents/: db.rs  handlers.rs  mod.rs  models.rs
api/src/mail/: mailer.rs
api/src/page/: db.rs  handlers.rs  mod.rs  models.rs
api/src/posts/: handlers.rs  models.rs
api/src/site/: db.rs  handlers.rs  mod.rs  models.rs
api/src/tags/: handlers.rs
front/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
front/src/: global_state.rs  main.rs  old_main.rs
front/src/capsules/: menu.rs
front/src/components/: featured.rs  footer.rs  grid.rs  headings.rs  light_switch.rs  menu.rs  newsletters.rs
front/src/httpreq/: .mod.rs.swp  mod.rs  model.rs  user.rs
front/src/templates/: about.rs  index.rs  index.rs_old_color_not_properly_rendered  latest.rs  libraries.rs  mod.rs  test.rs
front/static/: comp.txt  events.txt  full.txt  index.txt  latest.html  latest.txt  publications.txt  publics.txt
front/static/css/: tailwind.css  tailwind.min.css  tailwind.min.css.map
front/static_old/: index.html_old
hypertest/: Cargo.toml  Dockerfile  docker-compose.yml
hypertest/src/: main.rs
(+11 files in other folders)
